# phrenology

./: .gitignore  .pylintrc  README.md  baxter-norm.list  baxter.list  doms.list  phrenology.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
phrenology/: __init__.py  main.py
phrenology/common/: __init__.py  output.py  output_template.py
phrenology/component/: __init__.py  header.py
phrenology/registry/: __init__.py  headers.py  owasp-header-dictionary.py
tests/component/: header_test.py
